--- a/textract-api.ipynb
+++ b/textract-api.ipynb
@@ -119,18 +119,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fa108161-6352-4d2d-b2c9-cad24879b579",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "jupyter-ai 2.18.1 requires faiss-cpu, which is not installed.\n",
+      "aiobotocore 2.13.1 requires botocore<1.34.132,>=1.34.70, but you have botocore 1.35.2 which is incompatible.\n",
+      "autogluon-common 0.8.3 requires pandas<1.6,>=1.4.1, but you have pandas 2.1.4 which is incompatible.\n",
+      "autogluon-core 0.8.3 requires pandas<1.6,>=1.4.1, but you have pandas 2.1.4 which is incompatible.\n",
+      "autogluon-core 0.8.3 requires scikit-learn<1.4.1,>=1.1, but you have scikit-learn 1.4.2 which is incompatible.\n",
+      "autogluon-features 0.8.3 requires pandas<1.6,>=1.4.1, but you have pandas 2.1.4 which is incompatible.\n",
+      "autogluon-features 0.8.3 requires scikit-learn<1.4.1,>=1.1, but you have scikit-learn 1.4.2 which is incompatible.\n",
+      "autogluon-multimodal 0.8.3 requires pandas<1.6,>=1.4.1, but you have pandas 2.1.4 which is incompatible.\n",
+      "autogluon-multimodal 0.8.3 requires pytorch-lightning<1.10.0,>=1.9.0, but you have pytorch-lightning 2.0.9 which is incompatible.\n",
+      "autogluon-multimodal 0.8.3 requires scikit-learn<1.4.1,>=1.1, but you have scikit-learn 1.4.2 which is incompatible.\n",
+      "autogluon-multimodal 0.8.3 requires torch<1.14,>=1.9, but you have torch 2.0.0.post104 which is incompatible.\n",
+      "autogluon-multimodal 0.8.3 requires torchmetrics<0.12.0,>=0.11.0, but you have torchmetrics 1.0.3 which is incompatible.\n",
+      "autogluon-multimodal 0.8.3 requires torchvision<0.15.0, but you have torchvision 0.15.2a0+ab7b3e6 which is incompatible.\n",
+      "autogluon-tabular 0.8.3 requires pandas<1.6,>=1.4.1, but you have pandas 2.1.4 which is incompatible.\n",
+      "autogluon-tabular 0.8.3 requires scikit-learn<1.4.1,>=1.1, but you have scikit-learn 1.4.2 which is incompatible.\n",
+      "autogluon-timeseries 0.8.3 requires pandas<1.6,>=1.4.1, but you have pandas 2.1.4 which is incompatible.\n",
+      "autogluon-timeseries 0.8.3 requires pytorch-lightning<1.10.0,>=1.7.4, but you have pytorch-lightning 2.0.9 which is incompatible.\n",
+      "autogluon-timeseries 0.8.3 requires torch<1.14,>=1.9, but you have torch 2.0.0.post104 which is incompatible.\n",
+      "langchain-aws 0.1.6 requires boto3<1.35.0,>=1.34.51, but you have boto3 1.35.2 which is incompatible.\n",
+      "langchain-core 0.1.52 requires packaging<24.0,>=23.2, but you have packaging 24.1 which is incompatible.\n",
+      "sparkmagic 0.21.0 requires pandas<2.0.0,>=0.17.1, but you have pandas 2.1.4 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
-    "!pip install --force-reinstall amazon-textract-textractor==1.7.11\n",
-    "!pip install inflect\n",
-    "!pip install requests-aws4auth\n",
-    "!pip install opensearch-py\n",
-    "!pip install anthropic"
+    "!pip install --force-reinstall amazon-textract-textractor==1.7.11 --quiet\n",
+    "!pip install inflect --quiet\n",
+    "!pip install requests-aws4auth --quiet\n",
+    "!pip install opensearch-py --quiet\n",
+    "!pip install anthropic --quiet\n",
+    "!pip install openpyxl --quiet"
    ]
   },
   {
@@ -144,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "5d14636c-4f02-4b2d-874a-cc44de0c85c7",
    "metadata": {
     "tags": []
@@ -170,15 +201,15 @@
     "from openpyxl.worksheet.cell_range import CellRange\n",
     "s3=boto3.client(\"s3\")\n",
     "from botocore.config import Config\n",
-    "config = Config(\n",
+    "config_bedrock = Config(\n",
     "    read_timeout=600, \n",
     "    retries = dict(\n",
     "        max_attempts = 5 \n",
     "    )\n",
     ")\n",
-    "from anthropic import Anthropic\n",
-    "client = Anthropic()\n",
-    "bedrock_runtime = boto3.client(service_name='bedrock-runtime',region_name='us-east-1',config=config)"
+    "#from anthropic import Anthropic\n",
+    "#client = Anthropic()\n",
+    "bedrock_runtime = boto3.client(service_name='bedrock-runtime',region_name='us-east-1',config=config_bedrock)"
    ]
   },
   {
@@ -192,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "8144b0ae-4209-4a0d-aa71-6fa8097d1653",
    "metadata": {},
    "outputs": [],
@@ -266,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "5351c441-f635-412d-9318-0a3b5b55cbe6",
    "metadata": {
     "tags": []
@@ -387,14 +418,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "5c1d6899-82bd-49aa-8d64-ff4ebfdb235b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default bucket: sagemaker-us-east-1-626723862963\n"
+     ]
+    }
+   ],
    "source": [
-    "BUCKET=\"BUCKET\" \n",
+    "import sagemaker\n",
+    "\n",
+    "# get default bucket\n",
+    "session = sagemaker.Session()\n",
+    "BUCKET = session.default_bucket()\n",
+    "print(f\"Default bucket: {BUCKET}\")\n",
+    "\n",
     "extractor = Textractor(region_name=\"us-east-1\")\n",
     "file=\"amazon-2024-10k.pdf\" #Change to file path either in S3 or Local\n",
     "doc_id= os.path.basename(file)\n",
@@ -431,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "1f086761-25bd-4535-b1b1-10724abceae9",
    "metadata": {},
    "outputs": [
@@ -510,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "7211dead-9643-4afb-b9d0-cc59f905ce1b",
    "metadata": {
     "tags": []
@@ -606,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "a011ade1-bd57-49e3-a531-297e3c34d4f3",
    "metadata": {
     "tags": []
@@ -685,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "id": "21eb2fde-7547-4390-831b-5c13b198d775",
    "metadata": {
     "tags": []
@@ -740,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "id": "919c8154-00b5-466b-b3f6-54f91cde19fb",
    "metadata": {
     "tags": []
@@ -1038,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "id": "9501b756-ba00-48f7-a400-49bae1d834d6",
    "metadata": {
     "tags": []
@@ -1154,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "id": "c665aeba-cb90-40c4-b40b-367cd5874a57",
    "metadata": {
     "tags": []
@@ -1219,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "id": "445e5827-3821-4c59-9e02-64c06db499e4",
    "metadata": {
     "tags": []
@@ -2842,9 +2887,9 @@
   ],
   "instance_type": "ml.m5.4xlarge",
   "kernelspec": {
-   "display_name": "Python 3 (Data Science 3.0)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/sagemaker-data-science-310-v1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2856,7 +2901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
